<resources>
    <string name="app_name">Apptrimônio</string>
    <string name="jump">Jump</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="wWelcome">Welcome!</string>
    <string name="wWelcomeD">Find out how much your teaching costs with Apptrimônio</string>
    <string name="wRegister">Registration not necessary</string>
    <string name="wRegiterD">You can enjoy all features without registration</string>
    <string name="wScan">Scan the codes</string>
    <string name="wScanD">Search for codes scattered on your campus</string>
    <string name="ok">Ok!</string>
    <string name="login">Login</string>
    <string name="logoff">Logout</string>
    <string name="madeLogoff">Você saiu de sua conta com sucesso!</string>
    <string name="changePass">Change password</string>
    <string name="singup">Sign Up</string>
    <string name="loginWith">Entre com</string>
    <string name="google">Google</string>
    <string name="loginAccess">Entre em sua conta já cadastrada!</string>
    <string name="singupAccess">Cadastre sua conta para acessar mais funcionalidades!</string>
    <string name="email">E-mail</string>
    <string name="validMail">E-mail válido</string>
    <string name="emailUsed">E-mail utilizado no cadastro</string>
    <string name="password">Password</string>
    <string name="emailUsedError">Este e-mail já está cadastrado!</string>
    <string name="emailNotUsedError">Este e-mail não foi cadastrado!</string>
    <string name="passError">A senha está incoreta!</string>
    <string name="loginError">Ocorreu um erro ao fazer login! Tente novamente.</string>
    <string name="loginBanned">A conta com este e-mail foi desativada!</string>
    <string name="singupError">Ocorreu um erro ao fazer o cadastro! Tente novamente.</string>
    <string name="forgotPass">Forgot your password?</string>
    <string name="dontHaveAccount">Haven’t got an account yet? Click here to sign up!</string>
    <string name="alreadyHaveAccount">Got an account already? Click here to login!</string>
    <string name="loginSuccess">Você entrou com sucesso!</string>
    <string name="loginFail">Ocorreu um erro ao entrar: </string>
    <string name="registerSucess">Você cadastrou sua conta com sucesso!</string>
    <string name="registerFail">Ocorreu um erro ao se cadastrar: </string>
    <string name="confirmEmail">Confirm e-mail</string>
    <string name="confirmEmailDesc">Confirm your registration clicking the link in your e-mail!</string>
    <string name="yourEmailSingup">Your signup e-mail</string>
    <string name="sendEmail">Send e-mail</string>
    <string name="sendEmailSuccess">E-mail enviado com sucesso!</string>
    <string name="sendEmailFail">Ocorreu um erro ao enviar o e-mail: </string>
    <string name="sendEmailWait">Enviando o e-mail…</string>
    <string name="appDesc">See how much your education costs.</string>
    <string name="hello">Hello!</string>
    <string name="texts">Informative texts</string>
    <string name="apphelp">Help on the app</string>
    <string name="support">Support</string>
    <string name="apptrimonioSupport">Suporte - Apptrimônio</string>
    <string name="scanCode">Scan a code</string>
    <string name="addObj">Add an object</string>
    <string name="aprObj">Verificar objetos</string>
    <string name="profile">Perfil</string>
    <string name="reqGer">Requisitar gerenciador</string>
    <string name="invCode">Invalid code</string>
    <string name="remCode">Objeto removido</string>
    <string name="andCode">Objeto em andamento</string>
    <string name="disCode">Objeto não aprovado</string>
    <string name="intCode">Sem conexão</string>
    <string name="intCodeDesc">Aparentemente você está sem conexão com a internet!</string>
    <string name="errCode">Erro!</string>
    <string name="errCodeDesc">Ocorreu um erro desconhecido!</string>
    <string name="disCodeDesc">O objeto não foi aprovado pelos gerenciadores!</string>
    <string name="invCodeDesc">The scanned code doesn’t exist or is not an Apptrimônio’s code</string>
    <string name="remCodeDesc">O objeto foi removido pelo criador ou por um gerenciador. Motivo(s): </string>
    <string name="andCodeDesc">O objeto está em andamento e ainda não está disponível </string>
    <string name="tryAgain">Please, try again.</string>
    <string name="tryAgainLater">Por favor, tente novamente mais tarde.</string>
    <string name="naoInfo">Não informado</string>
    <string name="details">Detalhes</string>
    <string name="description">Descrição</string>
    <string name="pubDate">Data de publicação</string>
    <string name="objDesc">Descrição do objeto</string>
    <string name="objDescriptionEx">Exemplo: cadeiras brancas com encostos brancos, comprado a fim de…</string>
    <string name="objLan">Língua do objeto</string>
    <string name="imgDesc">Descrição de imagem</string>
    <string name="senValue">Valor sentimental</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="place">Place</string>
    <string name="date">Purchase date</string>
    <string name="report">Report</string>
    <string name="objNull">Sem informações</string>
    <string name="objName">Object’s name</string>
    <string name="objNameEx">Example: White chairs</string>
    <string name="objCat">Object’s category</string>
    <string name="objDate">Object’s purchase date</string>
    <string name="objDateEx">Example: 01/01/2020</string>
    <string name="objValue">Object’s value</string>
    <string name="objValueEx">Example: R$12,99</string>
    <string name="objPlace">Where the object is</string>
    <string name="objPlaceDesc">Example: IFSC - Xânxere</string>
    <string name="objImgDesc">Descrição de imagem</string>
    <string name="objImgDescEx">Exemplo: Duas cadeiras brancas</string>
    <string name="objSValue">Valor sentimental</string>
    <string name="objSValueEx">Exemplo: Cadeira utilizada pelos alunos em áreas recreativas</string>
    <string name="add">Add</string>
    <string name="objSuccess">Object added!</string>
    <string name="permRequired">Permissão necessária</string>
    <string name="permRequiredDesc">Para utilizar algumas das funcionalidades do aplicativo, você deve aceitar as seguintes permissões.</string>
    <string name="permRequiredAccept">Aceitar permissões</string>
    <string name="zxing_msg_default_status">Coloque o código dentro do quadro</string>
    <string name="text1t">Patrimônio público escolar</string>
    <string name="text2t">Legislação</string>
    <string name="text3t">Nossos impostos</string>
    <string name="text4t">Importância sentimental</string>
    <string name="qrcodelink">Aplicativo Apptrimônio - descubra quanto custa seu ensino! Quer descobrir o que tem neste QRCode? Baixe o aplicativo Apptrimônio em: https://bit.ly/apptrimonio - #$apptrimonio-%link%$#</string>
    <string name="invPass">Senha inválida! A sua senha precisa ter no minímo 8 caracteres!</string>
    <string name="invEmail">E-mail inválido! Insira um e-mail válido!</string>
    <string name="remObjError">Desbloqueie a permissão de gerenciador para remover objetos!</string>
    <string name="addObjError">Desbloqueie a permissão de adicionar objetos para adicionar objetos!</string>
    <string name="editObjError">Desbloqueie a permissão de editar objetos para editar objetos!</string>
    <string name="loginRequired">Para realizar essa ação, você precisa criar uma conta!</string>
    <string name="emailRequired">Para realizar essa ação, você precisa verificar seu e-mail!</string>
    <string name="editRequired">Para realizar essa ação, você precisa de permissão de edição!</string>
    <string name="addRequired">Para realizar essa ação, você precisa de permissão de adição!</string>
    <string name="managerRequired">Para realizar essa ação, você precisa de permissão de gerenciador!</string>
    <string name="repDoesNotExists">O objeto não existe no local indicado.</string>
    <string name="repSpam">Não é um objeto válido (spam)</string>
    <string name="repLanguage">A língua do objeto está incorreta</string>
    <string name="repCategory">A categoria do objeto está incorreta</string>
    <string name="repDate">A data de compra do objeto está incorreta</string>
    <string name="repImageDesc">A descrição de imagem do objeto está incorreta</string>
    <string name="repLocal">O local do objeto está incorreto</string>
    <string name="repName">O nome do objeto está incorreto</string>
    <string name="repValue">O valor do objeto está incorreto</string>
    <string name="repSenValue">O valor sentimental do objeto está incorreto</string>
    <string name="repImage">A imagem do objeto está incorreta</string>
    <string name="repDesc">A descrição do objeto está incorreta</string>
    <string name="other">Outro</string>
    <string name="downloadSuccess">O QRCode foi salvo no seu dispositivo com sucesso!</string>
    <string name="downloadError">Ocorreu um erro ao salvar o QRCode em seu dispositivo. Você concedeu as permissões necessárias?</string>
    <string name="qrcodePlaceholder">Quer descobrir o que está neste QRCode?\n\nBaixe o aplicativo! Apptrimônio - bit.ly/apptrimonio\n\n#$apptrimonio-%CODIGO%$#</string>
    <string name="reportDesc">Selecione os motivos a seguir para reportar o objeto. Após reportar o objeto, esta ação não poderá ser desfeita.</string>
    <string name="reportWarning">Lembre-se: reportar um objeto falsamente ou abusar da funcionalidade poderá ocasionar a suspensão da sua conta!</string>
    <string name="reportError">Ocorreu um erro ao reportar o objeto! Por favor, tente novamente.</string>
    <string name="reportSuccess">Você reportou o objeto com sucesso! Obrigado pela contribuição s2</string>
    <string name="reportErrorCheck">Você precisa selecionar ao menos um motivo para reportar!</string>
    <string name="objNotFound">O objeto não foi encontrado no nosso sistema! Por favor, tente novamente mais tarde.</string>
    <string name="informations">Informações</string>
    <string name="accountLevel">Nível da conta</string>
    <string name="level">Level </string>
    <string name="xpReceived">Experiência recebida</string>
    <string name="scannedCodes">Códigos escaneados</string>
    <string name="codes">código(s)</string>
    <string name="xp">experiência</string>
    <string name="addedObjects">Objetos adicionados</string>
    <string name="verifiedObjects">Objetos verificados</string>
    <string name="objects">objeto(s)</string>
    <string name="config">Configurações</string>
    <string name="accessibility">Acessibilidade</string>
    <string name="object">Objeto</string>
    <string name="receiveEmails">Receber e-mails</string>
    <string name="achievements">Conquistas</string>
    <string name="beginner">Novato</string>
    <string name="verified">Verificado</string>
    <string name="editor">Editor</string>
    <string name="adder">Adicionador</string>
    <string name="manager">Gerenciador</string>
    <string name="apptriloveri">Apptrilover I</string>
    <string name="apptriloverii">Apptrilover II</string>
    <string name="apptriloveriii">Apptrilover III</string>
    <string name="apptriloveriv">Apptrilover IV</string>
    <string name="apptriloverv">Apptrilover V</string>
    <string name="apptrilovervi">Apptrilover VI</string>
    <string name="exploreri">Explorador I</string>
    <string name="explorerii">Explorador II</string>
    <string name="exploreriii">Explorador III</string>
    <string name="exploreriv">Explorador VI</string>
    <string name="explorerv">Explorador V</string>
    <string name="explorervi">Explorador VI</string>
    <string name="helperi">Ajudante I</string>
    <string name="verObjects">Foram encontrados %s objeto(s)!</string>
    <string name="ver">Verificar próximo objeto</string>
    <string name="cancel">Cancelar</string>
    <string name="back">Voltar</string>
</resources>