<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_branco"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/objetosAndamento_titulo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/regular"
            android:text="@string/aprObj"
            android:textAlignment="center"
            android:textColor="@color/preto"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/objetosAndamento_fechar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="@+id/objetosAndamento_titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/objetosAndamento_titulo"
            app:layout_constraintTop_toTopOf="@+id/objetosAndamento_titulo"
            app:srcCompat="@drawable/fechar" />

        <TextView
            android:id="@+id/objetosAndamento_desc"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/regular"
            android:text="@string/verObjects"
            android:textAlignment="center"
            android:textColor="@color/preto"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/objetosAndamento_titulo" />

        <LinearLayout
            android:id="@+id/objetosAndamento_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/objetosAndamento_desc">

            <Button
                android:id="@+id/objetosAndamento_proximo"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:background="@drawable/button_verde_claro"
                android:contentDescription="@string/ver"
                android:fontFamily="@font/regular"
                android:padding="5dp"
                android:text="@string/ver"
                android:textAlignment="center"
                android:textColor="@color/branco"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/objetosAndamento_cancelar"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_vermelho_claro"
                android:contentDescription="@string/ver"
                android:fontFamily="@font/regular"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/branco"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/objetosAndamento_proximo" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>