<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="470dp"
    android:layout_gravity="center"
    android:background="@drawable/background_branco"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ativarpermissao_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/icon_permissoes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ativarpermissao_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/permRequired"
            android:textAlignment="center"
            android:textColor="@color/verde4"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ativarpermissao_icon" />

        <TextView
            android:id="@+id/ativarpermissao_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/regular"
            android:text="@string/permRequiredDesc"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/preto"
            android:alpha="0.6"
            app:layout_constraintEnd_toEndOf="@+id/ativarpermissao_titulo"
            app:layout_constraintStart_toStartOf="@+id/ativarpermissao_titulo"
            app:layout_constraintTop_toBottomOf="@+id/ativarpermissao_titulo" />

        <Button
            android:id="@+id/ativarpermissao_botao"
            android:layout_width="210dp"
            android:layout_height="55dp"
            android:textColor="@color/branco"
            android:textSize="17sp"
            android:fontFamily="@font/regular"
            android:textAllCaps="false"
            android:text="@string/permRequiredAccept"
            android:background="@drawable/button_verde_escuro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ativarpermissao_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>